--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorWhite">#FFF</color>
+
+    <!-- Screens background color-->
+    <color name="bg_screen1">#800000</color>
+    <color name="bg_screen2">#006400</color>
+    <color name="bg_screen3">#008B8B</color>
+    <color name="bg_screen4">#8A2BE2</color>
+
+    <!-- dots inactive colors -->
+    <color name="dot_dark_screen1">#FFFFF0</color>
+    <color name="dot_dark_screen2">#FFFFF0</color>
+    <color name="dot_dark_screen3">#FFFFF0</color>
+    <color name="dot_dark_screen4">#FFFFF0</color>
+    <color name="dot_dark_screen5">#FFFFF0</color>
+    <color name="dot_dark_screen6">#FFFFF0</color>
+    <color name="dot_dark_screen7">#FFFFF0</color>
+    <color name="dot_dark_screen8">#FFFFF0</color>
+    <color name="dot_dark_screen9">#FFFFF0</color>
+    <color name="dot_dark_screen10">#FFFFF0</color>
+    <color name="dot_dark_screen11">#FFFFF0</color>
+    <color name="dot_dark_screen12">#FFFFF0</color>
+    <color name="dot_dark_screen13">#FFFFF0</color>
+
+    <!-- dots active colors -->
+    <color name="dot_light_screen1">#A9A9A9</color>
+    <color name="dot_light_screen2">#A9A9A9</color>
+    <color name="dot_light_screen3">#A9A9A9</color>
+    <color name="dot_light_screen4">#A9A9A9</color>
+    <color name="dot_light_screen5">#A9A9A9</color>
+    <color name="dot_light_screen6">#A9A9A9</color>
+    <color name="dot_light_screen7">#A9A9A9</color>
+    <color name="dot_light_screen8">#A9A9A9</color>
+    <color name="dot_light_screen9">#A9A9A9</color>
+    <color name="dot_light_screen10">#A9A9A9</color>
+    <color name="dot_light_screen11">#A9A9A9</color>
+    <color name="dot_light_screen12">#A9A9A9</color>
+    <color name="dot_light_screen13">#A9A9A9</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+        <item>@color/dot_light_screen4</item>
+        <item>@color/dot_light_screen5</item>
+        <item>@color/dot_light_screen6</item>
+        <item>@color/dot_light_screen7</item>
+        <item>@color/dot_light_screen8</item>
+        <item>@color/dot_light_screen9</item>
+        <item>@color/dot_light_screen10</item>
+        <item>@color/dot_light_screen11</item>
+        <item>@color/dot_light_screen12</item>
+        <item>@color/dot_light_screen13</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+        <item>@color/dot_dark_screen4</item>
+        <item>@color/dot_dark_screen5</item>
+        <item>@color/dot_dark_screen6</item>
+        <item>@color/dot_dark_screen7</item>
+        <item>@color/dot_dark_screen8</item>
+        <item>@color/dot_dark_screen9</item>
+        <item>@color/dot_dark_screen10</item>
+        <item>@color/dot_dark_screen11</item>
+        <item>@color/dot_dark_screen12</item>
+        <item>@color/dot_dark_screen13</item>
+
+    </array>
+
 </resources>
